# scg_backend

./: .gitignore  Cargo.toml  PREAMBLE.md  README.md  Rocket.toml  common.py  compose.yaml  dispatcher_compose.yaml  dockerfile  llm_dispatcher.py  llm_model.py  pyproject.toml  readme.md  run.py
.github/workflows/: bumpversion.yml  docker-image.yml
connectors/: README.md  __init__.py  openai.py
connectors/resources/: gpt-4o-mini-docstrings-proto.jsonl
llm_dispatcher/: Cargo.toml  dockerfile
llm_dispatcher/src/: llm_pool.rs  main.rs  parser.rs
src/: llm_pool.rs  main.rs  parser.rs
src/http_server/: mod.rs
src/http_server/generate/: gen_documentation.rs  gen_horror.rs  mod.rs
src/llm/: mod.rs
