[package]
name = "scg_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
candle-core = "0.8.3"
candle-examples = "0.8.3"
candle-nn = "0.8.3"
candle-transformers = "0.8.3"
hf-hub = "0.4.1"
serde_json = "1.0.138"
tokenizers = "0.19.1"  # This is downgraded to match another version of tokenizers used by candle_examples
