[package]
name = "scg_b_rust_dispatcher"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version ="1.40", features = ["full"]}
anyhow = "1.0.95"
candle-core = "0.8.3"
candle-examples = "0.8.3"
candle-nn = "0.8.3"
candle-transformers = "0.8.3"
hf-hub = {version = "0.4.1", features = ["tokio"]}
tokenizers = "0.21.1"  # This is downgraded to match another version of tokenizers used by candle_examples
serde_json = "1.0.140"
serde = {version="1.0.219", features=["derive"]}
surrealdb = "2.2.2"
rdkafka = "0.37.0"
winnow = "0.7.6"


[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
