[project]
name = "scg-backend"
version = "0.1.2"
description = "The Server Backend for the SCG project"
authors = [
    {name = "Jemma",email = "jf1454@york.ac.uk"},
    {name = "hermaplusplus", email = "is942@york.ac.uk"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.10"

dependencies = [
"torch (>=2.6.0)",
"torchvision (>=0.21.0)",
"transformers (>=4.49.0)",
"accelerate (>=1.4.0)",
"pre-commit (>=4.1.0)",
"fastapi[standard] (>=0.115.8,<0.116.0)",
"uvicorn[standard] (>=0.34.0,<0.35.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.dependencies]
# torch = "^2.6.0"
# torchvision = "^0.21.0"
# transformers = "^4.49.0"
# accelerate = "^1.4.0"
# pre-commit = "^4.1.0"
# flask = "^3.1.0"
