[project]
name = "scg-backend"
version = "0.1.3"
description = "The Server Backend for the SCG project"
authors = [
    {name = "Jemma",email = "jf1454@york.ac.uk"},
    {name = "hermaplusplus", email = "is942@york.ac.uk"}
]

readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.1.0"
fastapi = {version = "^0.115.8", extras = ["standard"]}
uvicorn = {version = "^0.34.0", extras = ["standard"]}
kafka-python = "^2.1.4"
surrealdb = "^1.0.3"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
